--- a/public/pr-auth-redirect.html
+++ b/public/pr-auth-redirect.html
@@ -13,6 +13,7 @@
   <script type="text/javascript">
     const msalClient = new msal.PublicClientApplication({
       auth: {
+        // TODO: Reference the environment variable
         clientId: "16561780-a732-4b5a-8d0a-9eaf822a692c",
       }
     });
