Perform redirect to origin

--- a/public/pr-auth-redirect.html
+++ b/public/pr-auth-redirect.html
@@ -18,11 +18,22 @@
       }
     });
 
-    msalClient.handleRedirectPromise().then((resp) => {
-      if (resp !== null) {
-        window.location.href = resp.state;
+    const hash = window.location.hash;
+    if (hash.startsWith("#code=")) {
+      const regex = new RegExp(/\|(?<redirect>\S+)&/);
+      const result = regex.exec(hash);
+
+      if (result) {
+        const originUrl = result?.groups?.redirect;
+        window.location.href = originUrl + hash;
       }
-    })
+    }
+
+    // msalClient.handleRedirectPromise().then((resp) => {
+    //   if (resp !== null) {
+    //     window.location.href = resp.state;
+    //   }
+    // })
   </script>
 </body>
 
