--- a/public/pr-auth-redirect.html
+++ b/public/pr-auth-redirect.html
@@ -18,14 +18,22 @@
       }
     });
 
+    console.log("WINDOW HASH", window.location.hash);
+
     const hash = decodeURI(window.location.hash);
+    console.log("DECODED HASH", hash);
+
     if (hash.startsWith("#code=")) {
       const regex = new RegExp(/\|(?<redirect>\S+)&/);
       const result = regex.exec(hash);
 
       if (result) {
+        console.log("REDIRECT", result?.groups?.redirect)
         const originUrl = decodeURI(result?.groups?.redirect);
-        console.log(originUrl + hash);
+        console.log("DECODED REDIRECT", decodeURI(result?.groups?.redirect))
+
+        console.log("FINAL", originUrl + hash);
+
         window.location.href = originUrl + hash;
       }
     }
