--- a/public/pr-auth-redirect.html
+++ b/public/pr-auth-redirect.html
@@ -18,6 +18,7 @@
       }
     });
 
+    const hash = decodeURI(window.location.hash);
     if (hash.startsWith("#code=")) {
       const regex = new RegExp(/\|(?<redirect>\S+)&/);
       const result = regex.exec(hash);
@@ -26,7 +27,9 @@
         console.log("REDIRECT", result?.groups?.redirect)
         const originUrl = decodeURIComponent(result?.groups?.redirect);
         console.log("DECODED REDIRECT", decodeURI(originUrl))
+
         console.log("FINAL", originUrl + hash);
+
         window.location.href = originUrl + hash;
       }
     }
